test_regress/t/t_typedef_no_bad.out
%Error: t/t_typedef_no_bad.v:10:4: Can't find typedef/interface: 'sometype'
   10 |    sometype p;
      |    ^~~~~~~~
%Error: Exiting due to
